Fixed ACP layout issue

--- a/wcfsetup/install/files/acp/style/layout.scss
+++ b/wcfsetup/install/files/acp/style/layout.scss
@@ -56,6 +56,7 @@ $wcfAcpMenuWidth: 150px;
 		
 		.mainMenu {
 			flex: 0 0 auto;
+			margin-right: 0;
 			order: 2;
 		}
 		
